<?php
/**
 * 呱呱叫抽象类
 * Created by PhpStorm.
 * User: Administrator
 * Date: 2020/4/26
 * Time: 23:16
 */
interface CryBehaviour {
    /**
     * 叫行为
     * @return mixed
     */
    public function cry();
}