<?php
/**
 * 飞行抽象类
 * Created by PhpStorm.
 * User: Administrator
 * Date: 2020/4/26
 * Time: 23:16
 */
interface FlyBehaviour {
    /**
     * 飞行为
     * @return mixed
     */
    public function fly();
}